# structureless-target-screen

./: .gitignore  HANDOFF.md  HANDOFF_CLAUDE_SCIENCE.md  README.md
04_pipeline_code_and_docs/pipeline_src/: .gitignore  LICENSE  M4_ENSEMBLE.patch  README.md  environment.yml  pyproject.toml  requirements-pinned.txt
04_pipeline_code_and_docs/pipeline_src/docs/: COMPUTE.md  IO_CONTRACT.md  MCP_TOOLS.md  VALIDATION.md  agent_call_transcript.json
04_pipeline_code_and_docs/pipeline_src/examples/: STRESS_TEST_myc.md  demo.py  demo_output.txt  test_degradation.py
04_pipeline_code_and_docs/pipeline_src/examples/myc_run/: run_manifest.json
04_pipeline_code_and_docs/pipeline_src/examples/myc_run/m1/: intake.json
04_pipeline_code_and_docs/pipeline_src/examples/myc_run/m2/: qc.json
04_pipeline_code_and_docs/pipeline_src/examples/myc_run/m4/: binding_site.json
04_pipeline_code_and_docs/pipeline_src/examples/oplah_run/: run_manifest.json
04_pipeline_code_and_docs/pipeline_src/examples/oplah_run/m1/: O14841_af.cif  O14841_pae.json  intake.json
04_pipeline_code_and_docs/pipeline_src/examples/oplah_run/m2/: qc.json
04_pipeline_code_and_docs/pipeline_src/structure_to_screen/: __init__.py  _dock.py  _homolog.py  _library.py  _prioritize.py  _site_ensemble.py  cli.py  config.py  mcp_server.py  orchestrator.py  status.py
04_pipeline_code_and_docs/pipeline_src/structure_to_screen/modules/: m1_intake.py  m2_qc.py  m3_receptor.py  m4_site.py  m5_validate.py  m6_library.py  m7_screen.py  m8_prioritize.py
04_pipeline_code_and_docs/pipeline_src/tests/: test_pipeline.py
(+92 files in other folders)
